// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu opens and closes on click 1`] = `
<div
  class="StyledDrop-czaYBK fmcQnR"
  id="menu-drop__test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <button
    class="StyledButton-qbvYY brNyWU"
    tabindex="0"
    aria-label="Close Menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy idHLzO"
      direction="row"
    >
      <div
        class="StyledBox-YaZNy jqVXKk"
        direction="column"
      >
        Test
      </div>
      <svg
        class="StyledIcon-hcpUvT hodvOW"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </button>
  <div
    class="StyledBox-YaZNy oiLrA"
    direction="column"
  >
    <button
      class="StyledButton-qbvYY hBnIRQ"
      tabindex="0"
      disabled=""
      type="button"
    >
      <div
        class="StyledBox-YaZNy kjIoVu"
        direction="row"
      >
        Item 1
      </div>
    </button>
    <button
      class="StyledButton-qbvYY hBnIRQ"
      tabindex="0"
      disabled=""
      type="button"
    >
      <div
        class="StyledBox-YaZNy kjIoVu"
        direction="row"
      >
        Item 2
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu opens and closes on click 2`] = `
<div
  class="StyledDrop-czaYBK fmcQnR"
  id="menu-drop__test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <button
    class="StyledButton-qbvYY brNyWU"
    tabindex="0"
    aria-label="Close Menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy idHLzO"
      direction="row"
    >
      <div
        class="StyledBox-YaZNy jqVXKk"
        direction="column"
      >
        Test
      </div>
      <svg
        class="StyledIcon-hcpUvT hodvOW"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </button>
  <div
    class="StyledBox-YaZNy oiLrA"
    direction="column"
  >
    <button
      class="StyledButton-qbvYY hBnIRQ"
      tabindex="0"
      disabled=""
      type="button"
    >
      <div
        class="StyledBox-YaZNy kjIoVu"
        direction="row"
      >
        Item 1
      </div>
    </button>
    <button
      class="StyledButton-qbvYY hBnIRQ"
      tabindex="0"
      disabled=""
      type="button"
    >
      <div
        class="StyledBox-YaZNy kjIoVu"
        direction="row"
      >
        Item 2
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c3 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c3 g {
  fill: inherit;
  stroke: inherit;
}

.c3 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c3 *[stroke*="#"],
.c3 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c3 *[fill-rule],
.c3 *[FILL-RULE],
.c3 *[fill*="#"],
.c3 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c1 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c1 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <button
      aria-label="Open Menu"
      className="c1"
      disabled={false}
      href={undefined}
      icon={undefined}
      id={undefined}
      label={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      tabIndex="0"
      type="button"
    >
      <div
        className="c2"
        direction="row"
      >
        <svg
          aria-label="FormDown"
          className="c3"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu with custom message renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c4 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c4 *[stroke*="#"],
.c4 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*="#"],
.c4 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 12px;
}

.c1 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c1 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <button
      aria-label="Abrir Menu"
      className="c1"
      disabled={false}
      href={undefined}
      icon={undefined}
      id={undefined}
      label={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      tabIndex="0"
      type="button"
    >
      <div
        className="c2"
        direction="row"
      >
        <div
          className="c3"
          direction="column"
        >
          Test Icon
        </div>
        <svg
          aria-label="FormDown"
          className="c4"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu with dropAlign renders 1`] = `
<button
  class="StyledButton-qbvYY fFFoxu"
  tabindex="0"
  id="menu"
  aria-label="Open Menu"
  type="button"
>
  <div
    class="StyledBox-YaZNy kjIoVu"
    direction="row"
  >
    <div
      class="StyledBox-YaZNy jqVXKk"
      direction="column"
    >
      Test
    </div>
    <svg
      class="StyledIcon-hcpUvT hodvOW"
      width="24px"
      height="24px"
      viewBox="0 0 24 24"
      version="1.1"
      role="img"
      aria-label="FormDown"
    >
      <polyline
        fill="none"
        stroke="#000"
        stroke-width="2"
        points="18 9 12 15 6 9"
      />
    </svg>
  </div>
</button>
`;

exports[`Menu with icon renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 12px;
}

.c1 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c1 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <button
      aria-label="Open Menu"
      className="c1"
      disabled={false}
      href={undefined}
      icon={undefined}
      id={undefined}
      label={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      tabIndex="0"
      type="button"
    >
      <div
        className="c2"
        direction="row"
      >
        <div
          className="c3"
          direction="column"
        >
          Test Icon
        </div>
        <svg />
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu with label renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

.c4 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c4 *[stroke*="#"],
.c4 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*="#"],
.c4 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 12px;
}

.c1 {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

@media only screen and (min-width:700px) {
  .c1 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <button
      aria-label="Open Menu"
      className="c1"
      disabled={false}
      href={undefined}
      icon={undefined}
      id={undefined}
      label={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      tabIndex="0"
      type="button"
    >
      <div
        className="c2"
        direction="row"
      >
        <div
          className="c3"
          direction="column"
        >
          Test
        </div>
        <svg
          aria-label="FormDown"
          className="c4"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
